<resources>
    <string name="app_smart_name">SmartSpeakDock</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_title">菜单</string>
    <string name="weather_title">天气</string>
    <string name="calendar_title">日历</string>
    <string name="music_title">音乐</string>
    <string name="shopping_title">购物</string>
    <string name="map_title">地图</string>
    <string name="baiduAI_title">语音设置</string>
    <string name="setting_title">设置</string>

    //drawer
    <string name="navigation_drawer_open">开启侧滑栏</string>
    <string name="navigation_drawer_close">关闭侧滑栏</string>

    //shopping web loading
    <string name="web_title_loading">网页加载中</string>
    <string name="web_message_loading">请等待...</string>
    <string name="web_sites_not_exists">抱歉，该页面不存在</string>

    //weather loading
    <string name="get_weather_info_error">获取天气信息失败</string>
    <string name="weather_loading_dialog">加载天气中...</string>
    <string name="weather">天气</string>
    <string name="weather_weather">天气：</string>
    <string name="weather_tomorrow">明天：</string>
    <string name="weather_after">后天：</string>
    <string name="weather_wash_car">洗车：</string>
    <string name="weather_clothes">穿衣：</string>
    <string name="weather_air">空气：</string>
    <string name="weather_forecast">天气预报</string>
    <string name="weather_index_of_living">生活指数</string>
    <string name="weather_air_quality">空气质量</string>
    <string name="weather_week_monday">周一</string>
    <string name="weather_week_tuesday">周二</string>
    <string name="weather_air_not_support">目前不支持该地区空气质量查询</string>
    <string name="weather_add_city_sure">确定</string>
    <string name="weather_add_city_cancel">取消</string>
    <string name="weather_add_city">添加城市</string>
    <string name="weather_cancel_select_city">取消选择城市</string>

    //network error
    <string name="network_not_connected">网络未连接，页面无法显示,联网后，往下拖动页面刷新</string>

    //setting
    <string name="voice_switch_on_off">语音开启设置</string>
    <string name="voice_switch_on_text">开启</string>
    <string name="voice_switch_off_text">关闭</string>
    <string name="bind_device">设备绑定</string>
    <string name="about">关于</string>
    <string name="version">版本</string>
    //calendar
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">号</string>
    <string name="add_event">添加事件</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="now">现在</string>
    <string name="week">星期</string>
    <string name="sunday">日</string>
    <string name="lunar_calendar">农历</string>
    <string name="yes">是</string>
    <string name="is_the_weekend">是周末</string>
    <string name="is_usual_day">是平常日</string>
    <string name="no_arrangement">没有安排事情</string>
    <string name="please_select_date">请选择日期</string>
    <string name="please_add_event">请添加事件</string>
    <string name="delete">删除</string>


    //map
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="net_error">网络不给力，请检查您的网络配置！</string>
    //splash
    <string name="Shenzhen">深圳市</string>
    <string name="life_car">洗车：较适宜</string>
    <string name="life_clothes">穿衣：较冷</string>
    <string name="wash_car">洗车</string>
    <string name="clothes">穿衣</string>
</resources>
